[tool.poetry]
name = "otalogparser"
version = "0.1.0"
description = "Script to parse SEP version from a delayed OTA OTAUpdate.ips log file"
authors = ["nyuszika7h <nyuszika7h@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
packaging = "^21.3"
pyasn1 = "^0.4.8"
rich = "^11.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
